JavaProjectOfEdureka(GitLabCICD,AWS,Docker,Kubernates)/k8s/service.yml
apiVersion: v1 
kind: Service
metadata:
  name: $CI_ENVIRONMENT_NAME-service
spec:
  type: ClusterIP
  selector:
    app: ${pod_name}
  ports:
  - name: http
    port: 8080
    targetPort: 8080
