JavaProjectOfEdureka(GitLabCICD,AWS,Docker,Kubernates)/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $CI_ENVIRONMENT_NAME-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ${host_url}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: $CI_ENVIRONMENT_NAME-service
            port: 
              name: http
